Translate to Vietnamese base on translation of icyfork

--- a/_layouts/vi_reference.html
+++ b/_layouts/vi_reference.html
@@ -23,11 +23,12 @@
 
 			<div class="grid_12">
 				<ul id="menu">
-					<li><a id="menu_home" href="/index.html">Tham Khảo</a></li>
-          <!-- <li><a id="menu_cookbook" href="/cookbook.html">Cookbook</a></li> -->
-					<li><a id="menu_about" href="/about.html">Về Trang Này</a></li>
+					<li><a id="menu_home" href="/vi/index.html">Tham Khảo</a></li>
+          <!-- <li><a id="menu_cookbook" href="/vi/cookbook.html">Cookbook</a></li> -->
+					<li><a id="menu_about" href="/vi/about.html">Tác Giả</a></li>
 					<li>&#167;</li>
-					<li><a href="https://github.com/git/git-reference">Mã Nguồn Trang Web</a></li>
+					<li><a href="https://github.com/git/git-reference">Mã Nguồn
+                        Tài Liệu</a></li>
         </ul>
         <br/>
         &nbsp;
@@ -35,51 +36,51 @@
 
 			<div class="grid_2" id="reflist">
           <div class="block">
-            <h3><a href="/creating">Nhận và Tạo Dự Án</a></h3>
+            <h3><a href="/vi/creating">Nhận và Tạo Dự Án</a></h3>
             <ul>
-              <li><a href="/creating/#init">init</a></li>
-              <li><a href="/creating/#clone">clone</a></li>
+              <li><a href="/vi/creating/#init">init</a></li>
+              <li><a href="/vi/creating/#clone">clone</a></li>
             </ul>
 					</div>
 
           <div class="block">
-            <h3><a href="/basic">Lệnh Ảnh Chụp (Snapshot) Cơ Bản</a></h3>
+            <h3><a href="/vi/basic">Cơ Bản Về Bản Sao</a></h3>
             <ul>
-              <li><a href="/basic/#add">add</a></li>
-              <li><a href="/basic/#status">status</a></li>
-              <li><a href="/basic/#diff">diff</a></li>
-              <li><a href="/basic/#commit">commit</a></li>
-              <li><a href="/basic/#reset">reset</a></li>
-              <li><a href="/basic/#rm-mv">rm, mv</a></li>
-              <li><a href="/basic/#stash">stash</a></li>
+              <li><a href="/vi/basic/#add">add</a></li>
+              <li><a href="/vi/basic/#status">status</a></li>
+              <li><a href="/vi/basic/#diff">diff</a></li>
+              <li><a href="/vi/basic/#commit">commit</a></li>
+              <li><a href="/vi/basic/#reset">reset</a></li>
+              <li><a href="/vi/basic/#rm-mv">rm, mv</a></li>
+              <li><a href="/vi/basic/#stash">stash</a></li>
             </ul>
           </div>
 
           <div class="block">
-            <h3><a href="/branching">Phân Nhánh và Tích Hợp</a></h3>
+            <h3><a href="/vi/branching">Phân Nhánh và Tích Hợp</a></h3>
             <ul>
-              <li><a href="/branching/#branch">branch</a></li>
-              <li><a href="/branching/#branch">checkout</a></li>
-              <li><a href="/branching/#merge">merge</a></li>
-              <li><a href="/branching/#log">log</a></li>
-              <li><a href="/branching/#tag">tag</a></li>
+              <li><a href="/vi/branching/#branch">branch</a></li>
+              <li><a href="/vi/branching/#branch">checkout</a></li>
+              <li><a href="/vi/branching/#merge">merge</a></li>
+              <li><a href="/vi/branching/#log">log</a></li>
+              <li><a href="/vi/branching/#tag">tag</a></li>
             </ul>
           </div>
 
           <div class="block">
-            <h3><a href="/remotes">Chia Sẻ và Cập Nhật Dự Án</a></h3>
+            <h3><a href="/vi/remotes">Chia Sẻ và Cập Nhật Dự Án</a></h3>
             <ul>
-              <li><a href="/remotes/#fetch">fetch, pull</a></li>
-              <li><a href="/remotes/#push">push</a></li>
-              <li><a href="/remotes/#remote">remote</a></li>
+              <li><a href="/vi/remotes/#fetch">fetch, pull</a></li>
+              <li><a href="/vi/remotes/#push">push</a></li>
+              <li><a href="/vi/remotes/#remote">remote</a></li>
             </ul>
           </div>
 
           <div class="block">
-            <h3><a href="/inspect">Kiểm Tra và So Sánh</a></h3>
+            <h3><a href="/vi/inspect">Kiểm Tra và So Sánh</a></h3>
             <ul>
-              <li><a href="/inspect/#log">log</a></li>
-              <li><a href="/inspect/#diff">diff</a></li>
+              <li><a href="/vi/inspect/#log">log</a></li>
+              <li><a href="/vi/inspect/#diff">diff</a></li>
             </ul>
           </div>
 
