Update FR layout

--- a/_layouts/fr_reference.html
+++ b/_layouts/fr_reference.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<title>Git Reference</title>
+		<title>Référence Git</title>
 		<link rel="stylesheet" type="text/css" href="/css/reset.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="/css/text.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="/css/grid.css" media="screen" />
@@ -18,16 +18,16 @@
     <div class="container_12">
 
 			<div class="grid_12">
-				<span id="branding">Git Reference</span>
+				<span id="branding">Référence Git</span>
       </div>
 
 			<div class="grid_12">
 				<ul id="menu">
-					<li><a id="menu_home" href="/index.html">Reference</a></li>
-          <!-- <li><a id="menu_cookbook" href="/cookbook.html">Cookbook</a></li> -->
-					<li><a id="menu_about" href="/about.html">About</a></li>
+					<li><a id="menu_home" href="/fr/index.html">Référence</a></li>
+          <!-- <li><a id="menu_cookbook" href="/fr/cookbook.html">Cookbook</a></li> -->
+          <li><a id="menu_about" href="/fr/about.html">À Propos</a></li>
 					<li>&#167;</li>
-					<li><a href="https://github.com/git/git-reference">Site Source</a></li>
+          <li><a href="https://github.com/git/git-reference">Sources du Site</a></li>
         </ul>
         <br/>
         &nbsp;
@@ -35,63 +35,63 @@
 
 			<div class="grid_2" id="reflist">
           <div class="block">
-            <h3><a href="/creating">Getting and Creating Projects</a></h3>
+            <h3><a href="/fr/creating">Récupérer et Créer des Projets</a></h3>
             <ul>
-              <li><a href="/creating/#init">init</a></li>
-              <li><a href="/creating/#clone">clone</a></li>
+              <li><a href="/fr/creating/#init">init</a></li>
+              <li><a href="/fr/creating/#clone">clone</a></li>
             </ul>
 					</div>
 
           <div class="block">
-            <h3><a href="/basic">Basic Snapshotting</a></h3>
+            <h3><a href="/fr/basic">Instantanés de base</a></h3>
             <ul>
-              <li><a href="/basic/#add">add</a></li>
-              <li><a href="/basic/#status">status</a></li>
-              <li><a href="/basic/#diff">diff</a></li>
-              <li><a href="/basic/#commit">commit</a></li>
-              <li><a href="/basic/#reset">reset</a></li>
-              <li><a href="/basic/#rm-mv">rm, mv</a></li>
-              <li><a href="/basic/#stash">stash</a></li>
+              <li><a href="/fr/basic/#add">add</a></li>
+              <li><a href="/fr/basic/#status">status</a></li>
+              <li><a href="/fr/basic/#diff">diff</a></li>
+              <li><a href="/fr/basic/#commit">commit</a></li>
+              <li><a href="/fr/basic/#reset">reset</a></li>
+              <li><a href="/fr/basic/#rm-mv">rm, mv</a></li>
+              <li><a href="/fr/basic/#stash">stash</a></li>
             </ul>
           </div>
 
           <div class="block">
-            <h3><a href="/branching">Branching and Merging</a></h3>
+            <h3><a href="/fr/branching">Branche et Fusion</a></h3>
             <ul>
-              <li><a href="/branching/#branch">branch</a></li>
-              <li><a href="/branching/#branch">checkout</a></li>
-              <li><a href="/branching/#merge">merge</a></li>
-              <li><a href="/branching/#log">log</a></li>
-              <li><a href="/branching/#tag">tag</a></li>
+              <li><a href="/fr/branching/#branch">branch</a></li>
+              <li><a href="/fr/branching/#branch">checkout</a></li>
+              <li><a href="/fr/branching/#merge">merge</a></li>
+              <li><a href="/fr/branching/#log">log</a></li>
+              <li><a href="/fr/branching/#tag">tag</a></li>
             </ul>
           </div>
 
           <div class="block">
-            <h3><a href="/remotes">Sharing and Updating Projects</a></h3>
+            <h3><a href="/fr/remotes">Partager et Mettre à Jour des Projets</a></h3>
             <ul>
-              <li><a href="/remotes/#fetch">fetch, pull</a></li>
-              <li><a href="/remotes/#push">push</a></li>
-              <li><a href="/remotes/#remote">remote</a></li>
+              <li><a href="/fr/remotes/#remote">remote</a></li>
+              <li><a href="/fr/remotes/#fetch">fetch, pull</a></li>
+              <li><a href="/fr/remotes/#push">push</a></li>
             </ul>
           </div>
 
           <div class="block">
-            <h3><a href="/inspect">Inspection and Comparison</a></h3>
+            <h3><a href="/fr/inspect">Inspection et Comparison</a></h3>
             <ul>
-              <li><a href="/inspect/#log">log</a></li>
-              <li><a href="/inspect/#diff">diff</a></li>
+              <li><a href="/fr/inspect/#log">log</a></li>
+              <li><a href="/fr/inspect/#diff">diff</a></li>
             </ul>
           </div>
 
           <!--
           <div class="block">
-            <h3><a href="/fixing">Fixing and Changing History</a></h3>
+            <h3><a href="/fr/fixing">Dépannage et Modification de l'Historique</a></h3>
             <ul>
-              <li><a href="/fixing/rebase.html">rebase</a></li>
-              <li><a href="/fixing/revert.html">revert</a></li>
-              <li><a href="/fixing/checkout.html">checkout</a></li>
-              <li><a href="/fixing/reset.html">reset</a></li>
-              <li><a href="/fixing/cherry-pick.html">cherry-pick</a></li>
+              <li><a href="/fr/fixing/rebase.html">rebase</a></li>
+              <li><a href="/fr/fixing/revert.html">revert</a></li>
+              <li><a href="/fr/fixing/checkout.html">checkout</a></li>
+              <li><a href="/fr/fixing/reset.html">reset</a></li>
+              <li><a href="/fr/fixing/cherry-pick.html">cherry-pick</a></li>
             </ul>
           </div>
           -->
