FR: Update layout

--- a/_layouts/fr_reference.html
+++ b/_layouts/fr_reference.html
@@ -76,7 +76,7 @@
           </div>
 
           <div class="block">
-            <h3><a href="/fr/inspect">Inspection et Comparison</a></h3>
+            <h3><a href="/fr/inspect">Inspection et Comparaison</a></h3>
             <ul>
               <li><a href="/fr/inspect/#log">log</a></li>
               <li><a href="/fr/inspect/#diff">diff</a></li>
