FR: update layout

--- a/_layouts/fr_reference.html
+++ b/_layouts/fr_reference.html
@@ -43,7 +43,7 @@
 					</div>
 
           <div class="block">
-            <h3><a href="/fr/basic">Instantanés de base</a></h3>
+            <h3><a href="/fr/basic">Instantanés de Base</a></h3>
             <ul>
               <li><a href="/fr/basic/#add">add</a></li>
               <li><a href="/fr/basic/#status">status</a></li>
@@ -67,7 +67,7 @@
           </div>
 
           <div class="block">
-            <h3><a href="/fr/remotes">Partager et Mettre à Jour des Projets</a></h3>
+            <h3><a href="/fr/remotes">Partager et Actualiser des Projets</a></h3>
             <ul>
               <li><a href="/fr/remotes/#remote">remote</a></li>
               <li><a href="/fr/remotes/#fetch">fetch, pull</a></li>
