FR: final touches for 1st draft

--- a/_layouts/fr_reference.html
+++ b/_layouts/fr_reference.html
@@ -43,7 +43,7 @@
 					</div>
 
           <div class="block">
-            <h3><a href="/fr/basic">Instantanés de Base</a></h3>
+            <h3><a href="/fr/basic">Bases des Instantanés</a></h3>
             <ul>
               <li><a href="/fr/basic/#add">add</a></li>
               <li><a href="/fr/basic/#status">status</a></li>
@@ -56,7 +56,7 @@
           </div>
 
           <div class="block">
-            <h3><a href="/fr/branching">Branche et Fusion</a></h3>
+            <h3><a href="/fr/branching">Branches et Fusions</a></h3>
             <ul>
               <li><a href="/fr/branching/#branch">branch</a></li>
               <li><a href="/fr/branching/#branch">checkout</a></li>
