--- a/_layouts/fr_reference.html
+++ b/_layouts/fr_reference.html
@@ -35,7 +35,7 @@
 
 			<div class="grid_2" id="reflist">
           <div class="block">
-            <h3><a href="/fr/creating">Récupérer et Créer des Projets</a></h3>
+            <h3><a href="/fr/creating">Obtention et Création des Projets</a></h3>
             <ul>
               <li><a href="/fr/creating/#init">init</a></li>
               <li><a href="/fr/creating/#clone">clone</a></li>
@@ -43,7 +43,7 @@
 					</div>
 
           <div class="block">
-            <h3><a href="/fr/basic">Bases des Instantanés</a></h3>
+            <h3><a href="/fr/basic">Capture d’Instantané Basique</a></h3>
             <ul>
               <li><a href="/fr/basic/#add">add</a></li>
               <li><a href="/fr/basic/#status">status</a></li>
@@ -56,7 +56,7 @@
           </div>
 
           <div class="block">
-            <h3><a href="/fr/branching">Branches et Fusions</a></h3>
+            <h3><a href="/fr/branching">Création de Branches et Fusion</a></h3>
             <ul>
               <li><a href="/fr/branching/#branch">branch</a></li>
               <li><a href="/fr/branching/#branch">checkout</a></li>
@@ -67,7 +67,7 @@
           </div>
 
           <div class="block">
-            <h3><a href="/fr/remotes">Partager et Actualiser des Projets</a></h3>
+            <h3><a href="/fr/remotes">Partage et Mise à Jour de Projets</a></h3>
             <ul>
               <li><a href="/fr/remotes/#remote">remote</a></li>
               <li><a href="/fr/remotes/#fetch">fetch, pull</a></li>
