appending this to the layout for the entire site makes the assets load correctly now, yayyyyyy

--- a/_layouts/reference.html
+++ b/_layouts/reference.html
@@ -3,16 +3,16 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<title>Git Reference</title>
-		<link rel="stylesheet" type="text/css" href="css/reset.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="css/text.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="css/grid.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="css/layout.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="css/nav.css" media="screen" />
-		<!--[if IE 6]><link rel="stylesheet" type="text/css" href="css/ie6.css" media="screen" /><![endif]-->
-		<!--[if IE 7]><link rel="stylesheet" type="text/css" href="css/ie.css" media="screen" /><![endif]-->
-		<script type="text/javascript" src="js/jquery-1.4.1.min.js"></script>
-		<script type="text/javascript" src="js/jquery-ui.min.js"></script>
-		<script type="text/javascript" src="js/action.js"></script>
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/reset.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/text.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/grid.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/layout.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/nav.css" media="screen" />
+		<!--[if IE 6]><link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/ie6.css" media="screen" /><![endif]-->
+		<!--[if IE 7]><link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/ie.css" media="screen" /><![endif]-->
+		<script type="text/javascript" src="{{ site.baseurl }}/js/jquery-1.4.1.min.js"></script>
+		<script type="text/javascript" src="{{ site.baseurl }}/js/jquery-ui.min.js"></script>
+		<script type="text/javascript" src="{{ site.baseurl }}/js/action.js"></script>
 	</head>
 	<body>
     <div class="container_12">
